--- a/Notebooks/0726-create_file_out_of_energies.ipynb
+++ b/Notebooks/0726-create_file_out_of_energies.ipynb
@@ -23,7 +23,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mSignature:\u001b[0m\n",
+      "\u001b[0mgenerate_random_data_from_energies\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m\n",
+      "\u001b[0m    \u001b[0mfile_single_path\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+      "\u001b[0m    \u001b[0mfile_pair_path\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+      "\u001b[0m    \u001b[0mfile_out_path\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+      "\u001b[0m    \u001b[0mmax_score\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+      "\u001b[0m    \u001b[0mn_samples\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1000\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+      "\u001b[0m    \u001b[0mn_amino_acids\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\n",
+      "\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mDocstring:\u001b[0m <no docstring>\n",
+      "\u001b[1;31mFile:\u001b[0m      d:\\raul\\onedrive - cornell university\\code\\peptide-qml\\my_code\\functions.py\n",
+      "\u001b[1;31mType:\u001b[0m      function"
+     ]
+    }
+   ],
+   "source": [
+    "generate_random_data_from_energies?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,10 +59,18 @@
     "    file_single_path='../data/energies/PET/data/bb14/SingleEnergy.txt',\n",
     "    file_pair_path='../data/energies/PET/data/bb14/PairwiseEnergy.txt',\n",
     "    file_out_path='../data/energies/PET/generated/bb14_Strings_Energies_10_000_4_aa.txt',\n",
+    "    n_amino_acids=4,\n",
     "    n_samples=10000,\n",
     "    max_score=1000,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
