--- a/Notebooks/0726-small_hybrid_model_1q_measurement_v2.ipynb
+++ b/Notebooks/0726-small_hybrid_model_1q_measurement_v2.ipynb
@@ -347,7 +347,19 @@
       "Epoch [5/25], Loss: 0.1232, Loss validation: 0.0715, Time remaining: ~1.0h 39.0m 2s\n",
       "Epoch [6/25], Loss: 0.1119, Loss validation: 0.0878, Time remaining: ~1.0h 32.0m 23s\n",
       "Epoch [7/25], Loss: 0.1166, Loss validation: 0.0381, Time remaining: ~1.0h 28.0m 19s\n",
-      "- Epoch [8/25], i: [704/9000], Loss: 0.1040\r"
+      "Epoch [8/25], Loss: 0.1176, Loss validation: 0.0692, Time remaining: ~1.0h 23.0m 58s\n",
+      "Epoch [9/25], Loss: 0.1128, Loss validation: 0.0616, Time remaining: ~1.0h 18.0m 26s\n",
+      "Epoch [10/25], Loss: 0.1114, Loss validation: 0.0900, Time remaining: ~1.0h 13.0m 4s\n",
+      "Epoch [11/25], Loss: 0.1107, Loss validation: 0.0721, Time remaining: ~1.0h 7.0m 53s\n",
+      "Epoch [12/25], Loss: 0.1123, Loss validation: 0.0713, Time remaining: ~1.0h 2.0m 48s\n",
+      "Epoch [13/25], Loss: 0.1139, Loss validation: 0.0659, Time remaining: ~0.0h 57.0m 46s\n",
+      "Epoch [14/25], Loss: 0.1198, Loss validation: 0.0863, Time remaining: ~0.0h 52.0m 49s\n",
+      "Epoch [15/25], Loss: 0.1145, Loss validation: 0.0574, Time remaining: ~0.0h 47.0m 52s\n",
+      "Epoch [16/25], Loss: 0.1098, Loss validation: 0.0571, Time remaining: ~0.0h 42.0m 58s\n",
+      "Epoch [17/25], Loss: 0.1339, Loss validation: 0.1207, Time remaining: ~0.0h 38.0m 7s\n",
+      "Epoch [18/25], Loss: 0.1311, Loss validation: 0.0966, Time remaining: ~0.0h 33.0m 17s\n",
+      "Epoch [19/25], Loss: 0.1167, Loss validation: 0.0551, Time remaining: ~0.0h 28.0m 29s\n",
+      "- Epoch [20/25], i: [6048/9000], Loss: 0.0483\r"
      ]
     }
    ],
