--- a/Notebooks/Connection.ipynb
+++ b/Notebooks/Connection.ipynb
@@ -83,56 +83,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 37, done.\u001b[K\n",
-      "remote: Counting objects: 100% (37/37), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (18/18), done.\u001b[K\n",
-      "remote: Total 26 (delta 7), reused 26 (delta 7), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (26/26), 1.04 MiB | 6.08 MiB/s, done.\n",
+      "remote: Enumerating objects: 21, done.\u001b[K\n",
+      "remote: Counting objects: 100% (21/21), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (2/2), done.\u001b[K\n",
+      "remote: Total 12 (delta 10), reused 12 (delta 10), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (12/12), 89.50 KiB | 1.54 MiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   29382eb..399e5f6  main       -> origin/main\n",
-      "Updating 29382eb..399e5f6\n",
+      "   12878f0..8b2ee34  main       -> origin/main\n",
+      "Updating 12878f0..8b2ee34\n",
       "Fast-forward\n",
-      " Notebooks/.png                                     | Bin \u001b[31m0\u001b[m -> \u001b[32m20704\u001b[m bytes\n",
-      " Notebooks/Connection.ipynb                         | 177 \u001b[32m+++\u001b[m\u001b[31m----\u001b[m\n",
-      " Notebooks/sh_1qm.ipynb                             | 516 \u001b[32m++++++++++\u001b[m\u001b[31m-----------\u001b[m\n",
-      " checkpoints/0802/models/0802-sh_1qm_1.pth          | Bin \u001b[31m0\u001b[m -> \u001b[32m50253\u001b[m bytes\n",
-      " checkpoints/0802/models/0802-sh_1qm_3.pth          | Bin \u001b[31m0\u001b[m -> \u001b[32m50253\u001b[m bytes\n",
-      " .../{0802-sh_1qm.ipynb => 0802-sh_1qm_1.ipynb}     | 375 \u001b[32m+++++\u001b[m\u001b[31m----------\u001b[m\n",
-      " .../0802/plots/0802-sh_1qm_losses_batches_1.png    | Bin \u001b[31m0\u001b[m -> \u001b[32m67452\u001b[m bytes\n",
-      " .../0802/plots/0802-sh_1qm_losses_batches_3.png    | Bin \u001b[31m0\u001b[m -> \u001b[32m57822\u001b[m bytes\n",
-      " .../0802/plots/0802-sh_1qm_losses_epoch_1.png      | Bin \u001b[31m0\u001b[m -> \u001b[32m19049\u001b[m bytes\n",
-      " .../0802/plots/0802-sh_1qm_losses_epoch_3.png      | Bin \u001b[31m0\u001b[m -> \u001b[32m19187\u001b[m bytes\n",
-      " .../0802-sh_1qm_losses_epoch_validation_1.png      | Bin \u001b[31m0\u001b[m -> \u001b[32m19855\u001b[m bytes\n",
-      " .../0802-sh_1qm_losses_epoch_validation_3.png      | Bin \u001b[31m0\u001b[m -> \u001b[32m21915\u001b[m bytes\n",
-      " checkpoints/0802/txts/0802-sh_1qm_validation_1.txt |  22 \u001b[32m+\u001b[m\n",
-      " checkpoints/0802/txts/0802-sh_1qm_validation_3.txt |  22 \u001b[32m+\u001b[m\n",
-      " my_code/functions.py                               |  29 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
-      " my_code/pytorch_model.py                           | 111 \u001b[32m++++\u001b[m\u001b[31m-\u001b[m\n",
-      " 16 files changed, 605 insertions(+), 647 deletions(-)\n",
-      " create mode 100644 Notebooks/.png\n",
-      " create mode 100644 checkpoints/0802/models/0802-sh_1qm_1.pth\n",
-      " create mode 100644 checkpoints/0802/models/0802-sh_1qm_3.pth\n",
-      " rename checkpoints/0802/notebooks/{0802-sh_1qm.ipynb => 0802-sh_1qm_1.ipynb} (69%)\n",
-      " create mode 100644 checkpoints/0802/plots/0802-sh_1qm_losses_batches_1.png\n",
-      " create mode 100644 checkpoints/0802/plots/0802-sh_1qm_losses_batches_3.png\n",
-      " create mode 100644 checkpoints/0802/plots/0802-sh_1qm_losses_epoch_1.png\n",
-      " create mode 100644 checkpoints/0802/plots/0802-sh_1qm_losses_epoch_3.png\n",
-      " create mode 100644 checkpoints/0802/plots/0802-sh_1qm_losses_epoch_validation_1.png\n",
-      " create mode 100644 checkpoints/0802/plots/0802-sh_1qm_losses_epoch_validation_3.png\n",
-      " create mode 100644 checkpoints/0802/txts/0802-sh_1qm_validation_1.txt\n",
-      " create mode 100644 checkpoints/0802/txts/0802-sh_1qm_validation_3.txt\n"
+      " Notebooks/sh_1qm.ipynb                        |  77 \u001b[32m++++\u001b[m\u001b[31m-----\u001b[m\n",
+      " Notebooks/sq_1qm.ipynb                        | 232 \u001b[32m+++++++\u001b[m\u001b[31m-------------------\u001b[m\n",
+      " checkpoints/0803/versions/0803-sh_1qm.version |   2 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " my_code/pytorch_model.py                      |  28 \u001b[32m+++\u001b[m\u001b[31m-\u001b[m\n",
+      " 4 files changed, 114 insertions(+), 225 deletions(-)\n"
      ]
     }
    ],
    "source": [
-    "# pull changes (git)\n",
+    "# pull changes (git) <-> from git to JupyterLab\n",
     "!cd peptide-QML && git fetch && git pull && cd .."
    ]
   },
@@ -161,7 +137,7 @@
     }
    ],
    "source": [
-    "# push changes (git)\n",
+    "# push changes (git) <-> from JupyterLab to git\n",
     "!cd peptide-QML && git add . && git commit -m \"data trained model\" && git push && cd .."
    ]
   }
