--- a/Notebooks/seq_score_model.ipynb
+++ b/Notebooks/seq_score_model.ipynb
@@ -547,21 +547,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PennyLane",
+   "display_name": "JL_Pennylane",
    "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "name": "jl_pennylane"
   }
  },
  "nbformat": 4,
