--- a/Notebooks/sh_em_1qm.ipynb
+++ b/Notebooks/sh_em_1qm.ipynb
@@ -147,10 +147,10 @@
     "    device_options = {'shots': None},\n",
     "    embedding = qn.parts.AngleEmbedding, \n",
     "    embedding_ansatz = qn.parts.Ansatz_11,\n",
-    "    # block_ansatz = qn.parts.Ansatz_11,\n",
+    "    block_ansatz = qn.parts.Ansatz_11,\n",
     "    measurement = qn.parts.Measurement('Z', 1),\n",
-    "    # embedding_n_layers = 4,\n",
-    "    # different_inputs_per_layer = False,\n",
+    "    embedding_n_layers = 4,\n",
+    "    different_inputs_per_layer = True,\n",
     "    block_n_layers = 50,\n",
     "    # wrapper_qlayer = pw.QLayer,\n",
     "    wrapper_qlayer = None,\n",
