--- a/Notebooks/sh_em_1qm_v2.ipynb
+++ b/Notebooks/sh_em_1qm_v2.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "day = \"0809\"\n",
-    "name_notebook = day + \"-sh_em_1qm.ipynb\"\n",
+    "name_notebook = day + \"-sh_em_1qm_v2.ipynb\"\n",
     "\n",
     "#ask the user if that is correct, if he says yes kkep going, otherwise stop\n",
     "import sys\n",
@@ -269,7 +269,7 @@
    "outputs": [],
    "source": [
     "layers =  [ptm.nn.Embedding(num_embeddings=19, embedding_dim=quantum_layer.input_shape[0]//n_aminoacids), Reshape()]\n",
-    "layers += [quantum_layer()]\n"
+    "layers += [quantum_layer(), ptm.nn.Linear(1,1)]\n"
    ]
   },
   {
@@ -443,7 +443,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Epoch [1/50], i: [1440/9000], Loss: 1.9497\r"
+      "\t Validation string, \t i: 0; \t prediction: -0.0670, \t target: 0.1588, \t loss: 1.4219\n",
+      "\t Validation string, \t i: 1; \t prediction: 0.1729, \t target: -0.0855, \t loss: 3.0216\n",
+      "\t Validation string, \t i: 2; \t prediction: 0.1161, \t target: 0.0078, \t loss: 13.8053\n",
+      "Epoch [1/50], Loss: 2.1546, Loss validation: 2.2742, Time remaining: ~1.0h 39.0m 38s\n",
+      "- Epoch [2/50], i: [4768/9000], Loss: 2.2817\r"
      ]
     }
    ],
@@ -1699,18 +1703,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
