--- a/Notebooks/nomenclature.ipynb
+++ b/Notebooks/nomenclature.ipynb
@@ -21,6 +21,7 @@
     "\n",
     "    - _Nothing_\n",
     "    - e: embedding\n",
+    "    - em: embedding that requires an input longer than n_qubits\n",
     "\n",
     "x ->\n",
     "\n",
