--- a/Notebooks/nomenclature.ipynb
+++ b/Notebooks/nomenclature.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "a ->\n",
     "\n",
-    "    - s: small\n",
+    "    - s: small (4)\n",
+    "    - m: medium (8)\n",
     "    - n: normal (12)\n",
     "\n",
     "b -> \n",
