--- a/Notebooks/sh_em_1qm.ipynb
+++ b/Notebooks/sh_em_1qm.ipynb
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.keep_track_params=False,"
+    "model.keep_track_params=False"
    ]
   },
   {
@@ -646,7 +646,7 @@
     "\n",
     "# train the model\n",
     "model.train(\n",
-    "    optimizer= optim.SGD,\n",
+    "    optimizer= optim.Adam,\n",
     "    optimizer_options={'lr': 0.1},\n",
     "    num_epochs = 50,                \n",
     "    batch_size = 32,\n",
@@ -678,13 +678,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14101"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(model.parameters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The file peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_losses_batches_8.png already exists, it will be replaced\n",
       "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_losses_batches_8.png\n"
      ]
     },
@@ -702,7 +723,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_losses_epoch_8.png\n"
+      "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_losses_epochs_8.png\n"
      ]
     },
     {
@@ -719,7 +740,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_losses_epoch_validation_8.png\n"
+      "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_losses_epochs_validation_8.png\n"
      ]
     },
     {
@@ -731,22 +752,33 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The file peptide-QML/checkpoints/0829/txts/0829-sh_em_1qm_losses_batches_8.txt already exists, it will be replaced\n",
+      "Saved in:  <_io.TextIOWrapper name='peptide-QML/checkpoints/0829/txts/0829-sh_em_1qm_losses_batches_8.txt' mode='w' encoding='UTF-8'>\n",
+      "Saved in:  <_io.TextIOWrapper name='peptide-QML/checkpoints/0829/txts/0829-sh_em_1qm_losses_epochs_8.txt' mode='w' encoding='UTF-8'>\n",
+      "Saved in:  <_io.TextIOWrapper name='peptide-QML/checkpoints/0829/txts/0829-sh_em_1qm_losses_epochs_validation_8.txt' mode='w' encoding='UTF-8'>\n"
+     ]
     }
    ],
    "source": [
     "# plot the losses of the trainig loop and save the figures\n",
-    "model.plot_losses(save=True)"
+    "model.plot_losses(save=True, save_txt=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The file peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_0.weight_None_8.png already exists, it will be replaced\n",
       "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_0.weight_None_8.png\n"
      ]
     },
@@ -764,6 +796,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The file peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_2.block_weights_None_8.png already exists, it will be replaced\n",
       "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_2.block_weights_None_8.png\n"
      ]
     },
@@ -781,6 +814,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The file peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_2.final_weights_None_8.png already exists, it will be replaced\n",
       "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_2.final_weights_None_8.png\n"
      ]
     },
@@ -798,6 +832,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The file peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_3.weight_None_8.png already exists, it will be replaced\n",
       "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_3.weight_None_8.png\n"
      ]
     },
@@ -815,6 +850,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The file peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_3.bias_None_8.png already exists, it will be replaced\n",
       "Saved in:  peptide-QML/checkpoints/0829/plots/0829-sh_em_1qm_parameter_3.bias_None_8.png\n"
      ]
     },
