--- a/Notebooks/sh_em_1qm_loop.ipynb
+++ b/Notebooks/sh_em_1qm_loop.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "day = \"0829\"\n",
-    "name_notebook = day + \"-sh_em_1qm.ipynb\"\n",
+    "day = \"0830\"\n",
+    "name_notebook = day + \"-sh_em_1qm_loop.ipynb\"\n",
     "\n",
     "#ask the user if that is correct, if he says yes kkep going, otherwise stop\n",
     "import sys\n",
@@ -123,16 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Quantum node"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_aminoacids = len(string_list[0])"
+    "# Training"
    ]
   },
   {
@@ -206,9 +197,9 @@
     "\n",
     "        # train the model\n",
     "        model.train(\n",
-    "            optimizer= optim.SGD,\n",
+    "            optimizer= optim.Adam,\n",
     "            optimizer_options={'lr': 0.1},\n",
-    "            num_epochs = 50,                \n",
+    "            num_epochs = 100,                \n",
     "            batch_size = 32,\n",
     "        )\n",
     "\n",
@@ -288,18 +279,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
