--- a/Notebooks/sh_em_1qm_loop.ipynb
+++ b/Notebooks/sh_em_1qm_loop.ipynb
@@ -3595,7 +3595,7 @@
     "        model.plot_validation(save=True, fig_size=(9,9), percentatge=1)\n",
     "\n",
     "        # print validation and save it\n",
-    "        model.validation(save=True, precision=4, percentatge=1, print=False)"
+    "        model.str_validation(save=True, precision=4, percentatge=1, print=False)"
    ]
   },
   {
