--- a/Notebooks/sh_em_1qm_loop.ipynb
+++ b/Notebooks/sh_em_1qm_loop.ipynb
@@ -17,7 +17,7 @@
    "outputs": [],
    "source": [
     "day = \"0830\"\n",
-    "name_notebook = day + \"-sh_em_1qm_loop_v4.ipynb\"\n",
+    "name_notebook = day + \"-sh_em_1qm_loop.ipynb\"\n",
     "\n",
     "#ask the user if that is correct, if he says yes kkep going, otherwise stop\n",
     "import sys\n",
@@ -3572,8 +3572,8 @@
     "            num_epochs = 30,                \n",
     "            batch_size = 32,\n",
     "            stop_training_options = {\n",
-    "                'lookback_epochs': 5, \n",
-    "                'threshold': 0.01\n",
+    "                'lookback_epochs': 10, \n",
+    "                'threshold': 0.005\n",
     "            },\n",
     "        )\n",
     "\n",
